ajustes na tela principal

--- a/src/app/componentes/tecnologias/tecnologias.component.html
+++ b/src/app/componentes/tecnologias/tecnologias.component.html
@@ -1,18 +1,10 @@
-<section class="tecnologias">
-  <div class="tecnologia" >
+ <section class="tecnologias">
+  <div class="tecnologia">
     <img src="/html.jpg" alt="html">
-  </div>
-  <div class="tecnologia">
     <img src="/css.jpg" alt="css">
+    <img src="/node.jpg" alt="node">
+    <img src="/js (3).JPG" alt="javascript">
+    <img src="/angular.JPG" alt="angular">
+    <img src="/figma.JPG" alt="figma">
   </div>
-  <div class="tecnologia">
-    <img src="/js.jpg" alt="javascript">
-  </div>
-  <div class="tecnologia">
-    <img src="/angular.jpg" alt="angular">
-  </div>
-  <div class="tecnologia">
-    <img src="/figma.jpg" alt="figma">
-  </div> 
-
 </section>
