--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<main>
+  <app-tecnologias></app-tecnologias>
+</main>
+
 <nav class="menu-nav">
   <ul>
     <li><a href="#inicio">Início</a></li>
@@ -6,7 +10,9 @@
     <li><a href="#contato">Contato</a></li>
   </ul>
 </nav>
-<main>
-    <app-tecnologias></app-tecnologias>
-</main>
+
+<div>
+  <app-home></app-home>
+</div>
+
 <router-outlet></router-outlet>
