--- a/src/app/componentes/tecnologias/tecnologias.component.css
+++ b/src/app/componentes/tecnologias/tecnologias.component.css
@@ -1,20 +1,24 @@
 .tecnologia {
   display: flex;
-  justify-content: center; /* centraliza horizontalmente */
-  align-items: center;     /* alinha verticalmente se necessário */
-                /* espaço entre as imagens */
+  flex-direction: row;
+  justify-content: center; 
+  align-items: center;  
   margin-top: 30px;  
+  gap: 60px;
+  cursor: pointer;
+  background-color: #fff;
  
    
    
 }
 
 .tecnologia img {
-  width: 60px;
+  width: 70px;
   height: auto;
   transition: transform 0.2s;
   
 }
+
 
 .tecnologia img:hover {
   transform: scale(1.1);
