--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,8 +1,13 @@
-<div class="home-container">
-    <img src="/thays (1).png" alt="foto-thays">
-  
+<main>
+  <div class="home-container">
     <div class="titulo-home">
-      <h1>Desenvolvedora<br><a href="#"><b>Front-End</b></a></h1>
+      <h1>
+        Desenvolvedora<br />
+        <a href="#"><b>Front-End</b></a>
+      </h1>
     </div>
+    <img src="/thays (1).png" alt="foto-thays" />
   </div>
-  
+
+  <app-tecnologias></app-tecnologias>
+</main>
