--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,14 +7,15 @@
   list-style: none;
   padding: 0;
   display: inline-flex;
-  gap: 50px; /* espaço entre os links */
+  gap: 60px; /* espaço entre os links */
 }
 
 .menu-nav li a {
   color: white;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   text-decoration: none;
   transition: color 0.3s;
+  cursor: pointer;
 }
 .menu-nav li a:hover {
   color: #FF69B4;
