--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,12 @@
-<main>
-  <app-tecnologias></app-tecnologias>
-</main>
-
 <nav class="menu-nav">
   <ul>
-    <li><a href="#inicio">Início</a></li>
-    <li><a href="#projetos">Projetos</a></li>
+    <li><a routerLink="/home">Início</a></li>
+    <li><a routerLink="/projetos">Projetos</a></li>
     <li><a href="#sobre">Sobre Mim</a></li>
     <li><a href="#contato">Contato</a></li>
   </ul>
 </nav>
 
 <div>
-  <app-home></app-home>
+  <router-outlet></router-outlet>
 </div>
-
-<router-outlet></router-outlet>
