finalização nas estilizações do portfolio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
   <ul>
     <li><a routerLink="/home">Início</a></li>
     <li><a routerLink="/projetos">Projetos</a></li>
-    <li><a href="#sobre">Sobre Mim</a></li>
-    <li><a href="#contato">Contato</a></li>
+    <li><a routerLink="/sobre-mim">Sobre Mim</a></li>
+    <li><a routerLink="/contato">Contato</a></li>
   </ul>
 </nav>
 
