--- a/src/app/componentes/projetos/projetos.component.html
+++ b/src/app/componentes/projetos/projetos.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="projeto-1 projeto">
+<div class="container-projetos">
+  <div class="projeto">
     <h2>Conversor de Moedas</h2>
     <div class="img-container">
       <img src="/conversorMoeda.png" alt="Imagem do projeto Conversor de Moedas">
@@ -7,28 +7,27 @@
     <button class="botao">Ver Projeto</button>
   </div>
 
-  <div class="projeto-2 projeto">
-    <h2>Memoteca </h2>
+  <div class="projeto">
+    <h2>Memoteca</h2>
     <div class="img-container">
       <img src="/memoteca.png" alt="Imagem do projeto Memoteca">
-       </div>
-       <button class="botao">Ver Projeto</button>
+    </div>
+    <button class="botao">Ver Projeto</button>
   </div>
 
-  <div class="projeto-3 projeto">
+  <div class="projeto">
     <h2>Joken Po</h2>
     <div class="img-container">
       <img src="/jokenpo.png" alt="Imagem do projeto Joken Po">
     </div>
-      <button class="botao">Ver Projeto</button>
+    <button class="botao">Ver Projeto</button>
   </div>
 
-  <div class="projeto-4 projeto">
+  <div class="projeto">
     <h2>Projeto 4</h2>
     <div class="img-container">
       <img src="/projeto4.png" alt="Imagem do projeto 4">
     </div>
-    <button class="botao">Ver Projeto</button> 
-  </div> 
-  
+    <button class="botao">Ver Projeto</button>
+  </div>
 </div>
