--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -3,11 +3,9 @@
     <div class="titulo-home">
       <h1>
         Desenvolvedora<br />
-        <a href="#"><b>Front-End</b></a>
-      </h1>
+        <h2><b>Front-End</b></h2>
+      </h1>      
     </div>
-    <img src="/thays (1).png" alt="foto-thays" />
-  </div>
-
-  <app-tecnologias></app-tecnologias>
+    <app-tecnologias></app-tecnologias>
+  </div>  
 </main>
