--- a/src/app/componentes/contato/contato.component.html
+++ b/src/app/componentes/contato/contato.component.html
@@ -1,11 +1,19 @@
 <div class="contato">
-  <h2>Vamos nos conectar! 🤝</h2>
+  <h2>Vamos nos conectar!</h2>
 
-  <div class="redes-sociais">
-    <a href="https://wa.me/5511946118471" target="_blank" class="whatsapp">📱 WhatsApp</a>
-    <a href="https://www.linkedin.com/in/thays-silva-costa/" target="_blank" class="linkedin">💼 LinkedIn</a>
-    <a href="https://github.com/Thayscosta95" target="_blank" class="github">🐙 GitHub</a>
-  </div>
+ <div class="redes-sociais">
+  <a href="https://wa.me/5511946118471" target="_blank" class="whatsapp">
+    <img src="/ícone-whats.png" alt="WhatsApp"> WhatsApp
+  </a>
+  
+  <a href="https://www.linkedin.com/in/thays-silva-costa/" target="_blank" class="linkedin">
+    <img src="/ícone-in.png" alt="LinkedIn"> LinkedIn
+  </a>
+
+  <a href="https://github.com/Thayscosta95" target="_blank" class="github">
+    <img src="/icones/github.png" alt="GitHub"> GitHub
+  </a>
+</div>
 
   <a href="curriculo-thays-costa.pdf" class="botao-curriculo" download>📄 Baixar Currículo</a>
 </div>
