inclusão de imagens na paginas de projetos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <nav class="menu-nav">
   <ul>
-    <li><a routerLink="/home">Início</a></li>
-    <li><a routerLink="/projetos">Projetos</a></li>
-    <li><a routerLink="/sobre-mim">Sobre Mim</a></li>
-    <li><a routerLink="/contato">Contato</a></li>
+    <li><a [routerLink]="['/home']" fragment="home">Início</a></li>
+    <li><a [routerLink]="['/projetos']" fragment="projetos">Projetos</a></li>
+    <li><a [routerLink]="['/sobre']" fragment="sobre">Sobre Mim</a></li>
+    <li><a [routerLink]="['/contato']" fragment="contato">Contato</a></li>
   </ul>
 </nav>
 
