--- a/src/app/componentes/projetos/projetos.component.html
+++ b/src/app/componentes/projetos/projetos.component.html
@@ -1,4 +1,4 @@
-<div class="container-projetos">
+<div id="projetos" class="container-projetos">
   <div class="projeto">
     <h2>Conversor de Moedas</h2>
     <div class="img-container">
@@ -16,17 +16,17 @@
   </div>
 
   <div class="projeto">
-    <h2>Joken Po</h2>
+    <h2>JokenPô</h2>
     <div class="img-container">
-      <img src="/jokenpo.png" alt="Imagem do projeto Joken Po">
+      <img src="/JokenPo.png" alt="Imagem do projeto Joken Po">
     </div>
     <button class="botao">Ver Projeto</button>
   </div>
 
   <div class="projeto">
-    <h2>Projeto 4</h2>
+    <h2>Mario Bros - Serviços</h2>
     <div class="img-container">
-      <img src="/projeto4.png" alt="Imagem do projeto 4">
+      <img src="/projetomario.png" alt="Imagem do projeto Mario Bros">
     </div>
     <button class="botao">Ver Projeto</button>
   </div>
