--- a/src/app/componentes/sobre-mim/sobre-mim.component.html
+++ b/src/app/componentes/sobre-mim/sobre-mim.component.html
@@ -1,4 +1,4 @@
-<div class="container-pricipal">
+<div id="sobre" class="container-pricipal">
   <img src="/thays (1).png" alt="Foto de Thays Costa" class="foto-perfil">
     <h2 class="sobre"> Sobre Mim</h2>
       <p>Sou Desenvolvedora Front-End apaixonada por transformar ideias em experiências digitais cativantes. 
