inclusão de informações

--- a/src/app/componentes/contato/contato.component.html
+++ b/src/app/componentes/contato/contato.component.html
@@ -11,9 +11,9 @@
   </a>
 
   <a href="https://github.com/Thayscosta95" target="_blank" class="github">
-    <img src="/icones/github.png" alt="GitHub"> GitHub
+    <img src="/ícone-github.png" alt="GitHub"> GitHub
   </a>
 </div>
 
-  <a href="curriculo-thays-costa.pdf" class="botao-curriculo" download>📄 Baixar Currículo</a>
+  <a href="/curriculo-Thays.pdf" class="botao-curriculo" download>📄 Baixar Currículo</a>
 </div>
