--- a/src/app/componentes/projetos/projetos.component.html
+++ b/src/app/componentes/projetos/projetos.component.html
@@ -4,7 +4,7 @@
     <div class="img-container">
       <img src="/conversorMoeda.png" alt="Imagem do projeto Conversor de Moedas">
     </div>
-    <button class="botao">Ver Projeto</button>
+    <button class="botao" routerLink="/ver-projetos/conversor-moedas">Ver Projeto</button>
   </div>
 
   <div class="projeto">
@@ -20,7 +20,7 @@
     <div class="img-container">
       <img src="/JokenPo.png" alt="Imagem do projeto Joken Po">
     </div>
-    <button class="botao">Ver Projeto</button>
+    <button class="botao" routerLink="/ver-projetos/jokenpo">Ver Projeto</button>
   </div>
 
   <div class="projeto">
