inclusão de links nos acessos de ver projeto

--- a/src/app/componentes/projetos/projetos.component.html
+++ b/src/app/componentes/projetos/projetos.component.html
@@ -12,7 +12,7 @@
     <div class="img-container">
       <img src="/memoteca.png" alt="Imagem do projeto Memoteca">
     </div>
-    <button class="botao">Ver Projeto</button>
+    <button class="botao" routerLink="/ver-projetos/memoteca">Ver Projeto</button>
   </div>
 
   <div class="projeto">
@@ -28,6 +28,6 @@
     <div class="img-container">
       <img src="/projetomario.png" alt="Imagem do projeto Mario Bros">
     </div>
-    <button class="botao">Ver Projeto</button>
+    <button class="botao" routerLink="/ver-projetos/mario-servicos">Ver Projeto</button>
   </div>
 </div>
