--- a/src/app/componentes/projetos/ver-projetos/mario-servicos/mario-servicos.component.html
+++ b/src/app/componentes/projetos/ver-projetos/mario-servicos/mario-servicos.component.html
@@ -1,1 +1,35 @@
-<p>mario-servicos works!</p>
+<div class="container-detalhe-projeto">
+  <h2 class="titulo-projeto-detalhe">Mario Bros - Serviços</h2>
+
+  <div class="img-detalhe-container">
+    <img src="/projetomario.png" alt="Banner do Projeto MarioBros">
+  </div>
+
+  <p class="descricao-projeto">
+    Este projeto foi desenvolvido juntamente com o instrutor Rodolfo Mori, do curso de Programação Full Stack da instituição de ensino
+    DevClub, com o obejtivo de fixar os conhecimentos em JavaScript. Esse projeto apresenta uma interface moderna,
+    responsiva e com foco em experiência do usuário.
+  </p>
+
+  <h3 class="subtitulo">Tecnologias Utilizadas:</h3>
+  <ul class="tecnologias-utilizadas">
+    <li>HTML</li>
+    <li>CSS</li>
+    
+    
+  </ul>
+
+  <h3 class="subtitulo">Objetivo:</h3>
+  <p class="descricao-projeto">
+    O objetivo deste projeto foi criar um jogo divertido e tecnológico de JokenPô, 
+    onde o usuário pode jogar contra o computador. 
+  </p>
+
+  <div class="botoes-projeto">
+    <a routerLink="/projetos" class="botao">← Voltar</a>
+    <a href="https://github.com/Thayscosta95/Projeto-Mario" target="_blank" class="botao botao-github">Ver no GitHub</a>
+    <a href="https://thayscosta95.github.io/Projeto-Mario/" target="_blank" class="botao botao-github">Ver no Git Pages</a>
+  </div>
+</div>
+
+
