alterações nos textos dos projetos

--- a/src/app/componentes/projetos/ver-projetos/mario-servicos/mario-servicos.component.html
+++ b/src/app/componentes/projetos/ver-projetos/mario-servicos/mario-servicos.component.html
@@ -7,8 +7,7 @@
 
   <p class="descricao-projeto">
     Este projeto foi desenvolvido juntamente com o instrutor Rodolfo Mori, do curso de Programação Full Stack da instituição de ensino
-    DevClub, com o obejtivo de fixar os conhecimentos em JavaScript. Esse projeto apresenta uma interface moderna,
-    responsiva e com foco em experiência do usuário.
+    DevClub, com o obejtivo de fixar os conhecimentos em HTML e CSS. 
   </p>
 
   <h3 class="subtitulo">Tecnologias Utilizadas:</h3>
@@ -21,8 +20,9 @@
 
   <h3 class="subtitulo">Objetivo:</h3>
   <p class="descricao-projeto">
-    O objetivo deste projeto foi criar um jogo divertido e tecnológico de JokenPô, 
-    onde o usuário pode jogar contra o computador. 
+    O objetivo deste projeto foi criar uma interface interativa e simples para que o usuário consiga
+    agendar serviços ou consultar os serviços prestados pelos irmãos mais famosos e fofos Mario e Luigi!
+    
   </p>
 
   <div class="botoes-projeto">
