--- a/src/app/componentes/projetos/ver-projetos/memoteca/memoteca.component.html
+++ b/src/app/componentes/projetos/ver-projetos/memoteca/memoteca.component.html
@@ -1,13 +1,13 @@
 <div class="container-detalhe-projeto">
-  <h2 class="titulo-projeto-detalhe">Mario Bros - Serviços</h2>
+  <h2 class="titulo-projeto-detalhe">Memoteca</h2>
 
   <div class="img-detalhe-container">
-    <img src="/projetomario.png" alt="Banner do Projeto MarioBros">
+    <img src="/memoteca.png" alt="Banner do Projeto Memoteca">
   </div>
 
   <p class="descricao-projeto">
-    Este projeto foi desenvolvido juntamente com o instrutor Rodolfo Mori, do curso de Programação Full Stack da instituição de ensino
-    DevClub, com o obejtivo de fixar os conhecimentos em JavaScript. Esse projeto apresenta uma interface moderna,
+    Este projeto foi desenvolvido juntamente com a Instrutora Nay da instituição Alura do curso de Angular, com o intuíto de 
+    criar um CRUD, com o obejtivo de fixar os conhecimentos em Angular e TypeScript. Esse projeto apresenta uma interface moderna,
     responsiva e com foco em experiência do usuário.
   </p>
 
@@ -15,14 +15,18 @@
   <ul class="tecnologias-utilizadas">
     <li>HTML</li>
     <li>CSS</li>
+    <li>TypeScript</li>
+    <li>Angular</li>
+    <li>Node.js</li>
     
     
   </ul>
 
   <h3 class="subtitulo">Objetivo:</h3>
   <p class="descricao-projeto">
-    O objetivo deste projeto foi criar um jogo divertido e tecnológico de JokenPô, 
-    onde o usuário pode jogar contra o computador. 
+    O objetivo deste projeto foi criar um ambiente onde o usuário 
+    tenha a experiencia de criar pensamentos, frases motivacionais e até mesmo lembretes, foi criado um 
+    banco de dados fake para guardar esses pensamentos criados, tendo a possibilidade de conultar, editar e excluir. 
   </p>
 
   <div class="botoes-projeto">
